@@ -4,3 +4,4 @@ enable.adminUser=true
 odataserver.serviceRoot=
 disable.kerberosAuthentication=false
 disable.basicAuthentication=false
+debug.enabled=false
